[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DataUtilityHub"
version = "0.1.0"
description = "Una biblioteca de ciencia de datos diseñada para simplificar el análisis exploratorio de datos y machine learning"
authors = [{name = "Tu Nombre"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
] 